force-app/main/default/objects/my_credit__c/my_credit__c.object-meta.xml
<CustomObject>
    <label>my credit</label>
    <nameField>
        <label>my credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>my credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>