force-app/main/default/objects/my_credit__c/fields/mr_man__c.field-meta.xml
<CustomField>
    <fullName>mr_man__c</fullName>
    <label>mr man</label>
    <length>10</length>
    <type>Text</type>
</CustomField>