force-app/main/default/objects/my_credit__c/fields/mr_sai_baba__c.field-meta.xml
<CustomField>
    <fullName>mr_sai_baba__c</fullName>
    <label>mr sai baba</label>
    <length>10</length>
    <type>Text</type>
</CustomField>