force-app/main/default/objects/my_credit__c/fields/mr_srikanth__c.field-meta.xml
<CustomField>
    <fullName>mr_srikanth__c</fullName>
    <label>mr srikanth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>