force-app/main/default/objects/my_credit__c/fields/mr_women__c.field-meta.xml
<CustomField>
    <fullName>mr_women__c</fullName>
    <label>mr women</label>
    <length>10</length>
    <type>Text</type>
</CustomField>